Update GWAS_regenie notebook with new changes

--- a/GWAS_regenie.ipynb
+++ b/GWAS_regenie.ipynb
@@ -112,7 +112,7 @@
     "    'p22006': 'ethnic_group',\n",
     "    'p22019': 'sex_chromosome_aneuploidy',\n",
     "    'p22021': 'kinship_to_other_participants'\n",
-    "}) #重命名列\n",
+    "}) #重命名列，方便后续筛选有做WES的participant（不是所有人都有WES数据）。\n",
     "\n",
     "df_qced['FID'] = df_qced['IID'] #新增FID列，Regenie要求输入表中必须包含 FID 和 IID 两列\n",
     "df_phenotype = df_qced[['FID', 'IID', 'urticaria_cc', 'sex', 'age', 'ever_smoked']] #从 QC 过的数据中挑出真正要用于 GWAS 的关键变量，生成最终的 phenotype 表。\n",
@@ -142,25 +142,24 @@
    ],
    "source": [
     "################Select only samples that have WES data available##############\n",
-    "# Get WES（.fam 是 PLINK 格式的一种文件，主要存放样本的家族结构和性别等基本信息。）\n",
-    "exome_folder = 'Population level exome OQFE variants, PLINK format - final release'#再此用的是final release，可以有自由选择。\n",
+    "# 获取WES participant数据（.fam 是 PLINK 格式的一种文件，主要存放样本的家族结构和性别等基本信息。）\n",
+    "exome_folder = 'Population level exome OQFE variants, PLINK format - final release'#用的是final release，可以自由选择。\n",
     "exome_field_id = '23158' #这个文件夹里所有文件的field id都是23158\n",
     "output_dir = '/Data/'\n",
     "\n",
-    "#只读了c1_b0_v1.fam，是因为所有的.fam文件都是一样的，可以查看md5来验证,详见最下方。\n",
+    "# 只读了c1_b0_v1.fam，是因为所有的.fam文件都是一样的，可以查看md5来验证,详见最下方。\n",
     "path_to_family_file = f'/mnt/project/Bulk/Exome sequences/{exome_folder}/ukb{exome_field_id}_c1_b0_v1.fam'\n",
     "plink_fam_df = pd.read_csv(path_to_family_file,  sep=r'\\s+', dtype='object',                           \n",
     "                           names = ['FID','IID','Father ID','Mother ID', 'sex', 'Pheno'], engine='python')\n",
     "\n",
-    "# Intersect the phenotype file and the WES .fam file\n",
-    "# to generate phenotype DataFrame for the participants\n",
+    "# 取phenotype file and the WES .fam file的participant交集\n",
     "urticaria_wes_df = df_phenotype.join(plink_fam_df.set_index('IID'), on='IID', rsuffix='_fam', how='inner')\n",
     "\n",
-    "# Drop unuseful columns from .fam file\n",
+    "# 去掉.fam file里不需要的列\n",
     "urticaria_wes_df.drop(\n",
     "    columns=['FID_fam','Father ID','Mother ID','sex_fam', 'Pheno'], axis=1, inplace=True, errors='ignore')\n",
     "\n",
-    "# Write phenotype files to a TSV file\n",
+    "# 把新的phenotype files输出成TSV文件\n",
     "urticaria_wes_df.to_csv('urticaria_wes.phe', sep='\\t', na_rep='NA', index=False, quoting=3)\n",
     "urticaria_wes_df.shape"
    ]
@@ -183,8 +182,8 @@
    ],
    "source": [
     "############### Upload the geno-pheno intersect phenotype file back to the RAP project###########\n",
-    "%%bash -s \"$output_dir\"\n",
-    "dx upload urticaria_wes.phe -p --path $1 --brief"
+    "%%bash -s \"$output_dir\" ##表示这整个 cell 用 bash shell 执行，而不是 Python。\n",
+    "dx upload urticaria_wes.phe -p --path $1 --brief #表示把 Python 变量 $output_dir 传递给 bash 作为参数。执行后，文件会上传到 DNAnexus 的该目录下。"
    ]
   },
   {
